Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,50 +31,27 @@
         <h1>
 <a id="revolution-pack" class="anchor" href="#revolution-pack" aria-hidden="true"><span class="octicon octicon-link"></span></a>Revolution Pack</h1>
 
-<p>The Revolution Pack is Minecraft ModPack designed to showcase <a href="https://sites.google.com/site/reikasminecraft/home">Reika's fine mods</a>, particularly RotaryCraft and Chromaticraft, in a medium-core playing environment inspired (loosely) by hardcore GregTech packs. Some notable features are:</p>
+<p>Can you rebuild civilization after the Revolution?</p>
+
+<p>The Revolution Pack is Minecraft ModPack by Haggle1996 which showcases a number of outstanding and new mods from the modding community. Built around the three pillars of design, tech, and magic, this pack brings them all together into a cohesive world that feels so much more alive than a typical kitchen-sink style modpack. Revolution's optional quest system, combined with it's progressive tech-tree, encourage you to wander through mods you've never seen before or take alternative paths through old-familiars -- or just play it for fun!</p>
+
+<p>The Revolution Pack is a medium-difficulty pack inspired loosely by the progression of hardcore GregTech packs. You'll need to move through RotaryCraft, RailCraft, ElectriCraft, and ReactorCraft to experience the full breadth of the tech mods. But don't let that discourage you -- The evolving quest book guides you through the progression and introduces you to new mods along the way. Plus, Revolution features an array of decorative and atmospheric mods, like DecoCraft, Streams, ATG, Apple &amp; Milk &amp; Tea, BiblioCraft, Storage Drawers, Chisel 2, Big Trees, Plant Mega Pack, Grimoire of Gaia and many, many more.</p>
+
+<p>Some notable features are:</p>
 
 <ul>
-<li>Gated mod progression through RotaryCraft -- convert those stacks of Iron ore into HSLA, 'cause you're gonna need it.</li>
-<li>Overhauled ore generation to make mining more exploratory and less grindy. Not every chunk will have iron in it -- but once you find a vein, you'll have enough for your next round of machinery.</li>
+<li>Something for everyone: magic, tech, monsters, and decorations</li>
+<li>Gated progression into advanced mods through RotaryCraft and RailCraft</li>
+<li>Unique world generation through ATG, BoP, Streams, Rogue-like dungeons, ChromatiCraft, and Grimoire of Gaia</li>
+<li>A large selection of decorative and game-enriching mods, like DecoCraft, Plant Mega Pack, Garden Stuff, Apple &amp; Milk &amp; Tea, and so many more</li>
+<li>Magical mods that don't break balance - ChromatiCraft, Thaumcraft, and Botania.</li>
+<li>Overhauled ore generation to make mining more exploratory and less grindy. Not every chunk will have iron in it -- but once you find a vein, you'll have enough for your next round of machinery</li>
 <li>Automated ore generation in mid-game (Bees and TC)</li>
-<li>Several sorting systems (logistics pipes, AE, Refined Relocation, etc.)</li>
+<li>Hunger changes and new flora encourage you to discover new and old ways to feed yourself -- no more collecting 50 different kinds of seeds</li>
+<li>Several sorting systems (Logistics Pipes, Applied Energistics, Refined Relocation, etc.) appeal to any skill level (or inclination)</li>
 <li>Lore and quests/achievements - the in-game quest book will guide you through the pack (optional)</li>
-<li>Medium-core: challenging, but not grindy or excessively difficult.</li>
+<li>Medium-core: challenging, but neither grindy nor excessively difficult. </li>
 <li>Encourages movement through ancilliary mods</li>
-</ul>
-
-<h2>
-<a id="roadmap" class="anchor" href="#roadmap" aria-hidden="true"><span class="octicon octicon-link"></span></a>Roadmap:</h2>
-
-<p>Completed:</p>
-
-<ul>
-<li>[x] Ore generation is complete</li>
-<li>[x] Mod selection is stable</li>
-</ul>
-
-<p>In progress:</p>
-
-<ul>
-<li>[2%] Quest writing</li>
-<li>[10%] Mod difficulty and gating</li>
-</ul>
-
-<p>To Do:</p>
-
-<ul>
-<li>[ ] Mod-pack branding</li>
-<li>[ ] Website</li>
-<li>[ ] Channel</li>
-<li>[ ] Forum presence</li>
-</ul>
-
-<p>In Consideration:</p>
-
-<ul>
-<li>[ ] Hunger revamp</li>
-<li>[ ] End-game alternatives</li>
-<li>[ ] </li>
 </ul>
       </section>
     </div>
