--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <header>
       <div class="container">
-        <h1>Pack Code: RevolutionPack Get it on the ATLauncher!</h1>
-        <h1>Revolution Pack</h1>
-        <h2>Revolution Pack for Minecraft 1.7.10</h2>
+        <h1>Pack Code: RevolutionPack</h1>
+        <h2>Revolution Pack</h1>
+        <h2>for Minecraft 1.7.10</h2>
 
         <section id="downloads">
           <a href="https://github.com/Haggle1996/RevolutionPack/zipball/master" class="btn">Download as .zip</a>
