Adding back pack code

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Revolution Pack by Haggle1996
-headline: Recent Updates
+headline: "Pack Code: RevolutionPack"
 excerpt: "Revolution Pack by Haggle1996"
 search_omit: true
 image:
