swapping disqus shorturl

--- a/article/rev1-first-day/index.html
+++ b/article/rev1-first-day/index.html
@@ -257,7 +257,7 @@
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-  var disqus_shortname = 'revolutionpack2';
+  var disqus_shortname = 'revolutionpack';
   var disqus_url = 'http:\/\/revolutionpack.info\/article\/rev1-first-day\/';
   (function() {
     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
