--- a/public/postpage1/index.html
+++ b/public/postpage1/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><link rel="canonical" href="http://localhost:1313/post/"/><meta http-equiv="content-type" content="text/html; charset=utf-8" /><meta http-equiv="refresh" content="0;url=http://localhost:1313/post/" /></head></html>
+<!DOCTYPE html><html><head><link rel="canonical" href="http://revolutionpack.info/post/"/><meta http-equiv="content-type" content="text/html; charset=utf-8" /><meta http-equiv="refresh" content="0;url=http://revolutionpack.info/post/" /></head></html>
