--- a/article/rev2-gameplay-changes/index.html
+++ b/article/rev2-gameplay-changes/index.html
@@ -321,6 +321,12 @@
 <li>Spawners aren&rsquo;t moveable intact during the early game; you must research technology to move them or use them for powered spawners.</li>
 </ul>
 
+<h2 id="trivia:2dc582e763001218f60802f283920a1d">Trivia</h2>
+
+<ul>
+<li>Dead bodies can be removed by hitting them with a shovel.</li>
+</ul>
+
 <h1 id="mod-specific-changes:2dc582e763001218f60802f283920a1d">Mod-specific changes</h1>
 
 <h2 id="animals:2dc582e763001218f60802f283920a1d">Animals+</h2>
