--- a/article/rev2-gameplay-changes/index.html
+++ b/article/rev2-gameplay-changes/index.html
@@ -313,12 +313,13 @@
 <li>Ores generally yield more from a single block; however, each raw ore is of lower quality, requiring more processing. Advanced tiers of processing equipment yield more ore from a given block.</li>
 <li>Ore flowers spawn on the surface, indicating nearby ores.</li>
 <li>Oregen has been completely redone using Custom Ore Generation First Revival. This is significantly faster than the CoFH ore gen and means most players will not need to pregenerate their worlds! Yay!</li>
-<li>Torches will set fire to nearby blocks.</li>
+<li>Torches will set fire to nearby blocks and burn out over time.</li>
 <li>Water is finite. You will need to take this into account when building machines (such as the steam engine) that require water. There are several mechanisms in the game to create water.</li>
 <li>Seasons change approximately every 32 Minecraft days, with a year lasting 128 Minecraft days. Seasons alter the temperature and precipitation of a biome, and affect various machines and crop growth that depend on these factors.</li>
 <li>Animals will breed, age, and die on their own, assuming proper food (such as grass) is present in their vicinity.</li>
 <li>Naturally-spawning Vanilla and Forestry trees will die off over time, turning into compost and eventually dirt. Dropped saplings will plant themselves.</li>
-<li>Food now rots over time. This can be overcome by building Fridges and Freezers (storage blocks from Cooking for Blockheads and Enviromine).</li>
+<li>Food now rots over time. This can be overcome by building Eskys and Freezers (storage blocks from and Enviromine that integrate with Cooking for Blockheads).</li>
+<li>Only basic seeds drop from breaking grass. You will need to create mutations in AgriCraft to discover all possible food seeds.</li>
 <li>Unsupported cave and building rooves will collapse on you. Make sure to support your ceilings! Different materials can stretch different lengths (up to 3 blocks out). Building common engineered structures, such as l-girder shapes, can extend blocks indefinitely.</li>
 <li>Crop growth is significantly slower and is affected by season. Be sure to plant early, often, and extensively. Crops generally grow better underground or in greenhouses, and in friendly biomes.</li>
 <li>Power consumption and generation has been revamped throughout the pack. Generally, things are more expensive.</li>
@@ -329,6 +330,7 @@
 &ndash; Tier 4: ElectriCraft (power transmission)</li>
 <li>Early game RF power is best provided through either the Rotational Dynamo or the Immersive Engineering waterwheel/windmill.</li>
 <li>Spawners aren&rsquo;t moveable intact during the early game; you must research technology to move them or use them for powered spawners.</li>
+<li>Many repetetive items are hidden in NEI (e.g., BiblioCraft and Storage Drawers wood variations; Gun Customization modified weapons). Use Creative Tab to access these items.</li>
 </ul>
 
 <h2 id="trivia:2dc582e763001218f60802f283920a1d">Trivia</h2>
@@ -338,6 +340,16 @@
 </ul>
 
 <h1 id="mod-specific-changes:2dc582e763001218f60802f283920a1d">Mod-specific changes</h1>
+
+<h2 id="agricraft:2dc582e763001218f60802f283920a1d">Agricraft</h2>
+
+<ul>
+<li>Resource crops are disabled</li>
+<li>Disabled natura integration</li>
+<li>Removed decorative blocks</li>
+<li>Reduced stat cap to 8</li>
+<li>Turned on hardcore mode</li>
+</ul>
 
 <h2 id="animals:2dc582e763001218f60802f283920a1d">Animals+</h2>
 
@@ -381,6 +393,13 @@
 <li>Engines require metal plates.</li>
 <li>A number of recipes from other mods are crafted on the Assembly Table</li>
 <li>Refinery is removed &ndash; use the Immersive Engineering Refinery for Fuel and Ethanol</li>
+<li>Turned off Water Springs</li>
+</ul>
+
+<h2 id="chisel:2dc582e763001218f60802f283920a1d">Chisel</h2>
+
+<ul>
+<li>Cannot chisel torches</li>
 </ul>
 
 <h2 id="chromaticraft:2dc582e763001218f60802f283920a1d">ChromatiCraft</h2>
@@ -469,6 +488,9 @@
 
 <ul>
 <li>Water plants are grown on farmland, not water.</li>
+<li>Seeds must be researched through crop mutations</li>
+<li>Removed gardens</li>
+<li>Epic Bacon is no longer craftable</li>
 </ul>
 
 <h2 id="headcrumbs:2dc582e763001218f60802f283920a1d">Headcrumbs</h2>
@@ -510,11 +532,21 @@
 <li>Removed the Diamond Dolly</li>
 </ul>
 
+<h2 id="matter-overdrive:2dc582e763001218f60802f283920a1d">Matter Overdrive</h2>
+
+<ul>
+<li>Gravitational anomolies only spawn on other planets and moons</li>
+<li>Tritanium and Dilithium only spawn on other planets and moons; tritanium spawns in shallow common veins; dilithium spawns deep in uncommon veins.</li>
+<li>Android only spawns on planets and moons</li>
+<li>Energy costs are generally doubled</li>
+</ul>
+
 <h2 id="natura:2dc582e763001218f60802f283920a1d">Natura</h2>
 
 <ul>
 <li>Removed barley and cotton crops, plus related recipes.</li>
 <li>Natura nether trees can&rsquo;t spawn as ChromatiCraft dye trees.</li>
+<li>Removed cactus juice.</li>
 </ul>
 
 <h2 id="open-blocks:2dc582e763001218f60802f283920a1d">Open Blocks</h2>
@@ -536,6 +568,14 @@
 
 <ul>
 <li>Added beeswax to ore dictionary for wax</li>
+</ul>
+
+<h2 id="pneumaticcraft:2dc582e763001218f60802f283920a1d">PneumaticCraft</h2>
+
+<ul>
+<li>Pneumatic Dynamo operates at 5% efficiency (very poor source of RF)</li>
+<li>Making Compressed Iron with TNT loses 100% of all ingots.</li>
+<li>Initial Compressed Iron can be made in the Ender IO Alloy Smelter.</li>
 </ul>
 
 <h2 id="railcraft:2dc582e763001218f60802f283920a1d">Railcraft</h2>
@@ -562,6 +602,12 @@
 <li>Monsters do not despawn in the morning (but they do burn to death).</li>
 </ul>
 
+<h2 id="rockhounding-mod:2dc582e763001218f60802f283920a1d">Rockhounding Mod</h2>
+
+<ul>
+<li>Disabled Chemistry, Mine Crawler, Gemology</li>
+</ul>
+
 <h2 id="roguelike-dungeons:2dc582e763001218f60802f283920a1d">Roguelike Dungeons</h2>
 
 <ul>
@@ -582,12 +628,6 @@
 <li>Food history length is 20</li>
 <li>Food history uses hunger restored instead of food named. For example, it will remember the last 5 items that restored 4 food, or the last 10 items that restored 2 food. Generally, this makes it so higher-nutrition foods require less variety than lower nutrition.<br /></li>
 <li>Previously eaten items are less nutritious.</li>
-</ul>
-
-<h2 id="twilight-forest:2dc582e763001218f60802f283920a1d">Twilight Forest</h2>
-
-<ul>
-<li>Disabled Uncrafting Table</li>
 </ul>
 
 <h2 id="vanilla:2dc582e763001218f60802f283920a1d">Vanilla</h2>
