--- a/article/rev1-gameplay-changes/index.html
+++ b/article/rev1-gameplay-changes/index.html
@@ -198,6 +198,10 @@
 <li>A number of key mod components are made on the BuildCraft Assembly Table</li>
 </ul>
 
+<p>Ore Gen Chart courtesy Nathan Roberts
+<img src="http://revolutionpack.info/images/Rev1Ores.png" alt="REVOLUTION|1 Ore Chart" />
+</p>
+
 <h3 id="apple-milk-tea:22391f28610b60a1b0da7b5f40048d56">Apple &amp; Milk &amp; Tea</h3>
 
 <ul>
