--- a/article/rev2-gameplay-changes/index.html
+++ b/article/rev2-gameplay-changes/index.html
@@ -278,33 +278,33 @@
 </tr>
 
 <tr>
+<td>Certus Quartz</td>
+<td>Spawns with charged certus quarts in vertical veins between y-level 76 and 52.</td>
+</tr>
+
+<tr>
 <td>Cadmium</td>
-<td>Spawns in layered veins between y-level 2 and 14.</td>
+<td>Spawns in the cave dimension, moon, and mars.</td>
 </tr>
 
 <tr>
 <td>Indium</td>
-<td>Spawns in layered veins between y-level 6 and 18.</td>
+<td>Spawns in the cave dimension, moon, and mars.</td>
 </tr>
 
 <tr>
 <td>Fluorite</td>
-<td>Spawns in large motherlodes between y-level 3 and 13 with large tendrils spreading out for long distances.</td>
+<td>Spawns in the cave dimension, moon, and mars.</td>
 </tr>
 
 <tr>
 <td>Magnetite</td>
-<td>Spawns in large, rare veins between y-level 76 and 98.</td>
+<td>Spawns in the cave dimension, moon, and mars, and occasionally above y-128 in the overworld.</td>
 </tr>
 
 <tr>
 <td>Calcite</td>
-<td>Spawns in rare veins between y-level 42 and 58.</td>
-</tr>
-
-<tr>
-<td>Certus Quartz</td>
-<td>Spawns with charged certus quarts in vertical veins between y-level 76 and 52.</td>
+<td>Spawns in the cave dimension, moon, and mars.</td>
 </tr>
 </tbody>
 </table>
@@ -450,6 +450,7 @@
 <li>Most of this mod is disabled, particularly the Ender Quarry, transport nodes, generators, and watering cans.</li>
 <li>Ender Lilies can only be found in The End</li>
 <li>Drum requires steel plates</li>
+<li>Last Millenium and Deep Dark are disabled. Use the Cave dimension (accessed by Enviromine Elevator) for mining dimension.</li>
 </ul>
 
 <h2 id="forestry:2dc582e763001218f60802f283920a1d">Forestry</h2>
@@ -457,8 +458,9 @@
 <ul>
 <li>Farms are now square, because 45 degree angles are hard.</li>
 <li>Forestry bees can now make RotaryCraft yeast.</li>
-<li>Engines are disabled</li>
 <li>Adventurer&rsquo;s Bags are renamed Ammo Bags and can hold ammo (obviously)</li>
+<li>Easy mode is set</li>
+<li>The Ender Hive can be obtained through Botania Mana Transfusion of a Tropical Hive</li>
 </ul>
 
 <h2 id="galacticraft:2dc582e763001218f60802f283920a1d">Galacticraft</h2>
