--- a/article/rev2-gameplay-changes/index.html
+++ b/article/rev2-gameplay-changes/index.html
@@ -423,6 +423,13 @@
 <li>Water must be pumped in to the sink.</li>
 </ul>
 
+<h2 id="draconic-evolution:2dc582e763001218f60802f283920a1d">Draconic Evolution</h2>
+
+<ul>
+<li>Draconium Ore does not spawn</li>
+<li>Draconium Ingots are made in the Arc Furnace using Terrasteel (Botania), Spatial Alloy Ingots (ChromatiCraft), Bedrock Ingots (RotaryCraft), Bedrockium Ingots (Extra Utilities), and VoidMetal Ingots (Thaumcraft).</li>
+</ul>
+
 <h2 id="ender-io:2dc582e763001218f60802f283920a1d">Ender IO</h2>
 
 <ul>
