--- a/public/article/rev2-gameplay-changes/index.html
+++ b/public/article/rev2-gameplay-changes/index.html
@@ -374,6 +374,7 @@
 
 <ul>
 <li>Removed most debuffs when you&rsquo;re tired.</li>
+<li>Sleeping no longer advances the time. You&rsquo;ll have to find ways to survive the night.</li>
 </ul>
 
 <h2 id="biomes-o-plenty:2dc582e763001218f60802f283920a1d">Biomes O&rsquo; Plenty</h2>
