--- a/article/rev2-first-day/index.html
+++ b/article/rev2-first-day/index.html
@@ -194,7 +194,7 @@
 
 <h3 id="realistic-terrain-generation-rtg-or-biomes-o-plenty-bop:67cc146bc8b7937bd9ee66a706ae5657">Realistic Terrain Generation (RTG) or Biomes O&rsquo; Plenty (BoP)</h3>
 
-<p>When starting a new world, you have a couple of world type options &ndash; either Biomes O&rsquo; Plenty or RTG-Realistic Terrain Generation. I highly recommend changing your world type to &lsquo;Realistic&rsquo; (RTG for SMP server.properties)  &ndash; it generates more realistic rolling hills and surface forms, using the BoP biomes. Vanilla world generation does not work, and you&rsquo;ll be plagued with frequent crashes if you fail to select either BoP or RTG. There is no performance advantage to either generator, so the choice is between classic Minecraft-style worlds (BoP) or more realistic hills (Realistic).</p>
+<p>When starting a new world, you have a couple of world type options &ndash; either Biomes O&rsquo; Plenty or RTG-Realistic Terrain Generation. I highly recommend changing your world type to &lsquo;Realistic&rsquo; (RTG for SMP server.properties)  &ndash; it generates more realistic rolling hills and surface forms, using the BoP biomes. Vanilla world generation does not work, and you&rsquo;ll be plagued with frequent crashes if you fail to select either BoP or RTG. There is a performance advantage to using RTG, so unless you&rsquo;re determined to use vanilla-style BoP worlds, you should choose RTG.</p>
 
 <p>I also recommend enabling cheats &ndash; just in case &ndash; but if you&rsquo;re the kind that&rsquo;s susceptible to temptation, you can leave it off. It can always be temporarily re-enabled by starting a LAN game and turning on cheats.</p>
 
@@ -206,9 +206,11 @@
 
 <p>Welcome to the Revolution! REVOLUTION|2 is an expansive, progressive pack with gated content that could take you weeks, if not months, to get through. While REV|2 is in essence an open-ended kitchen-sink pack, the challenge goal for the pack is to build a self-sustaining colony in the Barnard&rsquo;s Star solar system. Bonus points if your colony is hosted in a self-sustaining RF Tools dimension located in that system!</p>
 
-<p>But, first things first, you&rsquo;re going to want to find a place to setup camp. You should have enough food for a few days of travel, plus a sleeping bag (portable bed) to get you through the night. Keep your eye out for pigs as you travel &ndash; you&rsquo;ll need to kill one for your first HQM quest, if you&rsquo;re going to use the HQM guide. Be aware: unlike most mod packs, unsupported blocks can fall in REV|2. This means caves and old structures can collapse, unsupported walls can fall, and zombies can pick apart your cobblestone hovel. A great place to start is near poorjoe flowers (these look like tall, think single white flowers), as this will likely mean you have iron in your vicinity. Certain other flowers, in addition to poorjoe, indicate other ores are in the general vicinity (around 2 chunk radius, give or take).</p>
+<p>But, first things first, you&rsquo;re going to want to find a place to setup camp&hellip;and quickly! Since you can&rsquo;t sleep through the night, you will need to find shelter during the night. You should have enough food for a few days, plus a sleeping bag (portable bed) to recharge your energy. Keep your eye out for pigs as you travel &ndash; you&rsquo;ll need to kill one for your first HQM quest, if you&rsquo;re going to use the HQM guide. Be aware: unlike most mod packs, unsupported blocks can fall in REV|2. This means caves and old structures can collapse, unsupported walls can fall, and zombies can pick apart your cobblestone hovel. A great place to start is near sea-level (~y64) poorjoe flowers (these look like tall, thin, single white flowers), as this will likely mean you have iron in your vicinity. Certain other flowers, in addition to poorjoe, indicate other ores are in the general vicinity (around 30 block radius around the flower). The ore &lsquo;chart&rsquo; is located in the in-game guide, accessed by opening your inventory and clicking the Guide book along the left of the window. Please note, that while you can find ore flowers at higher elevations, they are much more difficult to retrieve with the sluice. For early game, you should focus on flowers at or near sea level (y64).</p>
 
 <p>Your first order of business will be securing iron ore. The in-game guide (accessed by opening your inventory, and clicking the upper book to the left of the inventory window) details how to setup a sluice. Detailed instructions for prospecting ores can be found <a href="http://reasonable-realism.wikia.com/wiki/Prospecting">here</a>, but for now, just worry about finding poorjoe flowers, building a sluice, and and getting your first few dust. Another easy early-game source of iron is limonite, which spawns in river and beach areas. You&rsquo;re also going to need food soon. You can survive off of food you scrounge up, however, you&rsquo;ll note quickly that food rots, so it&rsquo;s difficult to stockpile and very unfulfilling. Advanced foods can be crafted from various plants, but you&rsquo;ll need to research seeds for those plants first using AgriCraft crop sticks and mutation mechanics. The HQM book goes into a bit more detail about the sluice and crops, if you&rsquo;re unfamiliar with these mechanics.</p>
+
+<p>A great early source of sustainable food is either hamburgers (wheat &amp; cow &ndash; easily expandable with milk, bacon, cheese, and mushrooms) or PB&amp;J sandwhiches (using a nut butter, such as chestnut and apples).</p>
 
 <h3 id="a-bit-about-ore-generation:67cc146bc8b7937bd9ee66a706ae5657">A Bit About Ore Generation</h3>
 
@@ -216,7 +218,7 @@
 
 <h3 id="your-next-few-days:67cc146bc8b7937bd9ee66a706ae5657">Your Next Few Days&hellip;</h3>
 
-<p>Once you&rsquo;ve got some basic ore processing up and going, you going to want to venture into Immersive Engineering and steel production (your going to need lots of steel). Immersive Engineering will also provide your first early-game RF power (through a wind or water mill). Once you&rsquo;ve got some ore processing up and going, and a bit of iron stockpiled, you&rsquo;re going to want to build and power a RotaryCraft grinder. Until you have silk-touch on a pick, your early game ore processing should be IE Blast Furnace -&gt; RotaryCraft Grinder -&gt; Furnace, which will yield you 3 ingots per 8 raw ore, a huge increase over the initial 1 ingot per 8 (or 9) raw ore. Don&rsquo;t worry, there are ways to further increase your ore yields to outrageous levels!</p>
+<p>Once you&rsquo;ve got some basic ore processing up and going, you going to want to venture into Immersive Engineering and steel production (your going to need lots of steel). Immersive Engineering will also provide your first early-game RF power (through a wind or water mill). Once you&rsquo;ve got some ore processing up and going, and a bit of iron stockpiled, you&rsquo;re going to want to build and power a RotaryCraft grinder. Until you have silk-touch on a pick, your early game ore processing should be IE Blast Furnace -&gt; RotaryCraft Grinder -&gt; Furnace, which will yield you 3 ingots per 6 raw ore, a huge increase over the initial 1 ingot per 8 (or 9) raw ore. Don&rsquo;t worry, there are ways to further increase your ore yields to outrageous levels (3 ingots per raw ore)!</p>
 
 <p>Once you&rsquo;ve got steel going, you should also pick a mod for better tools. Botania and Ender IO provide some good options, though you have other choices (Thaumcraft, CC, RoC, etc.) If you&rsquo;ve not tried Botania&rsquo;s toolset and miss Tinker&rsquo;s Construct, I highly recommend you venture into Botania tools. You&rsquo;ll never miss TiCo again!</p>
 
@@ -236,6 +238,7 @@
 - Visit the galaxy through GalactiCraft and GalaxySpace (try setting up a sustainable colony on a space station or asteroid!)
 - Build a ReactorCraft Fusion Reactor, and use it to power something like <a href="http://imgur.com/gallery/Qo0il/new">this</a>.
 - Build a complete Modular Power Suit
+- Conquer all The End has to offer.
 - Automate all the things WITHOUT using Applied Energistics (there are MANY to choose from)
 - Setup an automated crafting system using Matter Overdrive, then become an Android</p>
 
@@ -243,28 +246,22 @@
 
 <h3 id="memory:67cc146bc8b7937bd9ee66a706ae5657">Memory</h3>
 
-<p><strong>SSP Single-player:</strong> 6GB of RAM is recommended. 4GB Minimum. If you experience frequent hard lag while exploring or moving, you probably do not have enough RAM allocated.</p>
+<p><strong>SSP Single-player:</strong> 5GB of RAM is recommended. 3.5GB Minimum. If you experience frequent hard lag while exploring or moving, you probably do not have enough RAM allocated.</p>
 
-<p><strong>SMP Multi-player Server:</strong> 6GB of RAM during world generation. Afterward, 4GB minimum.<br />
-<strong>SMP Multi-player Clients:</strong> 4GB recommended. 3.5GB required.</p>
-
-<p>REVOLUTION|2&rsquo;s spectacular veins and motherlodes (via Custom Ore Generation and Harder Ores) uses a lot of RAM to calculate vein sizes. As such, memory usage is high during chunk generation. If your world is stable and you&rsquo;re not generating new overworld chunks often, you can reduce your memory allocation to 4GB.</p>
+<p><strong>SMP Multi-player Server:</strong> 6GB of RAM; more with a larger playerbase.<br />
+<strong>SMP Multi-player Clients:</strong> 4GB recommended. 3GB required.</p>
 
 <h3 id="pregenerating-a-world:67cc146bc8b7937bd9ee66a706ae5657">Pregenerating a World</h3>
 
-<p>Pregenerating your world can significantly improve your REVOLUTION|2 experience, at the cost of some patience when starting a new world. Follow the following steps to pregenerate your world. <em>NOTE: for SMP, I recommend pregenerating your world in a single-player instance and then copying your map instead of through the server console, unless you&rsquo;re comfortable with server memory tools.</em></p>
+<p>Pregenerating your world can significantly improve your REVOLUTION|2 experience, at the cost of some patience when starting a new world. Follow the following steps to pregenerate your world.</p>
 
 <ol>
-<li>Allocate as much RAM to Minecraft as your system can safely support (you can lower this after pregeneration is complete). The RAM settings are located on the Settings&hellip;Java/Minecraft tab. Ignore the warning for allocating more than 4GB of RAM.</li>
-<li>Start Minecraft as usual and create a new map in <strong>creative mode</strong> (or open a LAN game and enable cheats). Be sure to select either <strong>Realistic</strong> or <strong>Biomes O&rsquo; Plenty</strong> for your world type. There is no performance advantage to either type.</li>
+<li>Allocate at least 6GB of RAM to Minecraft (you can lower this after pregeneration is complete). The RAM settings are located on the Settings&hellip;Java/Minecraft tab. Ignore the warning for allocating more than 4GB of RAM.</li>
+<li>Start Minecraft as usual and create a new map in <strong>creative mode</strong> (or open a LAN game and enable cheats). Be sure to select either <strong>Realistic</strong> or <strong>Biomes O&rsquo; Plenty</strong> for your world type. Remember, RTG worlds generate faster than BoP.</li>
 <li>Once the map has loaded (either SSP or SMP), do not move around and explore.</li>
-<li>Press F3 to open the info overlay. In the top right corner, you&rsquo;ll notice <code>Used memory:...</code>. You&rsquo;ll need to pay attention to this number as we pregenerate.</li>
 <li>Type <code>/pregenspawn 100</code> in the chat window. This will start pregenerating a 100 chunk radius world around your spawn (3200x3200 blocks), which is suitable for most SSP play. Increasing this number, even a little bit, will dramatically increase the time it takes to pregenerate.</li>
 <li>Pregeneration will continue, occasionally outputting <code>Generated 100 / 40000 chunks [ 0.25% ]</code> as it progresses. Every 1000 chunks, it will flush it&rsquo;s buffers.</li>
-<li>Important: <strong>Watch Used Memory in the top-right corner</strong>.</li>
-<li>When used memory consistently goes above 90%, exit Minecraft by clicking the X in the top right corner. Do not press <code>ESC</code> and Save and Exit. Doing so will take forever.</li>
-<li>Restart pregeneration by repeating the above steps, starting from Step 2. Repeat the process until pregeneration is complete (100%). <em>NOTE: pregeneration will look like it&rsquo;s starting over, but it actually skips quickly through previously-generated chunks and picks up where it left off.</em></li>
-<li>Shutdown and restart Minecraft. If necessary, adjust your Minecraft memory back to a reasonable amount (between 4GB and 6GB for most players. See memory recommendations above).</li>
+<li>Shutdown and restart Minecraft. If necessary, adjust your Minecraft memory back to a reasonable amount for your system (typically 4GB for most players. See memory recommendations above).</li>
 <li>Enjoy your new world!<br /></li>
 </ol>
 
@@ -274,7 +271,7 @@
 
 <ol>
 <li>Run on good hardware. The pack runs great with 4-8GB of RAM supporting 10-15 simultaneous players, assuming good CPU and SSDs. During early days of the server (before too much automation is built), the pack generally performs well with 20-25 players.</li>
-<li>Make sure you pregenerate the world using the steps above. There is no appreciable difference between RTG and BOP worlds, except aesthetics.</li>
+<li>Make sure you pregenerate the world using the steps above.</li>
 <li>Pregenerate at least the Overworld, Moon, Mars, Nether, and Cave Dimension. It is a good practice to save a copy of your empty, pregenerated Cave Dimension, as this serves as the mining dimension for the pack.</li>
 <li>Run Opis (downloaded separately) and periodically check for expensive chunks &ndash; most commonly it&rsquo;s things like a player having 200 chickens, etc.</li>
 <li>Restart the server at least once per day. Busy servers should consider 2 to 4 times per day.</li>
