--- a/article/rev3-first-day/index.html
+++ b/article/rev3-first-day/index.html
@@ -239,7 +239,7 @@
 
 <h3 id="end-of-the-early-game-and-starting-the-mid-game">End of the Early-Game and Starting the Mid-Game</h3>
 
-<p>By the end of early-game progression, you should have a hefty supply of iron, as well as stable mid-tier food production, and some basic automation using BuildCraft or Logistics Pipes. Just getting this far should take you some time, and you&rsquo;re not even half-way to the end of the pack! Mid-game progression in REVOLUTION|3 is all about getting bedrock ingots, which allow you to craft many machines from late game mods such as Galacticraft and RFTools. Bedrock ingots require you to delve through the depths of RotaryCraft. Along the way, you can upgrade your ore processing via more investment in Immersive Engineering and discovering ChromatiCraft. Also, once you&rsquo;ve unlocked bedrock ingots, you can build an elevator to take you to the Cave Dimension, which features much richer ore generation and is quarry-friendly (this is the mining dimension for SSP REVOLUTION|3).</p>
+<p>By the end of early-game progression, you should have a hefty supply of iron, as well as stable mid-tier food production, and some basic automation using BuildCraft or Logistics Pipes. Just getting this far should take you some time, and you&rsquo;re not even half-way to the end of the pack! Mid-game progression in REVOLUTION|3 is all about getting bedrock ingots, which allow you to craft many machines from late game mods such as RFTools. Bedrock ingots require you to delve through the depths of RotaryCraft. Along the way, you can upgrade your ore processing via more investment in Immersive Engineering and discovering ChromatiCraft. Also, once you&rsquo;ve unlocked bedrock ingots, you can build an elevator to take you to the Cave Dimension, which features much richer ore generation and is quarry-friendly (this is the mining dimension for SSP REVOLUTION|3).</p>
 
 <h3 id="mid-game-ore-processing">Mid-Game Ore Processing</h3>
 
@@ -251,14 +251,14 @@
 
 <h3 id="the-end-game">The End Game</h3>
 
-<p>As pointed out earlier, REVOLUTION|3 is a progressive, kitchen-sink pack, and there are MANY mods to delve deep into (listed below). In general, end-game content is going to require massive amounts of power generation &ndash; something you&rsquo;re going to want to build a ReactorCraft reactor for, though you could scrape by with several other methods of large-scale RF generation, such as Matter Overdrive&rsquo;s gravitational anomoly. If you&rsquo;re looking for a challenge goal, try building a self-sustaining colony in an RF-Tools dimension hosted on the planet Barnard&rsquo;s Star C. Getting this far is a big achievement!</p>
+<p>As pointed out earlier, REVOLUTION|3 is a progressive, kitchen-sink pack, and there are MANY mods to delve deep into (listed below). In general, end-game content is going to require massive amounts of power generation &ndash; something you&rsquo;re going to want to build a ReactorCraft reactor for, though you could scrape by with several other methods of large-scale RF generation, such as Matter Overdrive&rsquo;s gravitational anomoly. If you&rsquo;re looking for a challenge goal, try building a self-sustaining colony in an RF-Tools dimension hosted on a faraway planet. Getting this far is a big achievement!</p>
 
 <p>Here&rsquo;s some other achievement-worthy goals:
 - Acquire the Botania relics
 - Delve through Thaumcraft and it&rsquo;s many add-ons
 - Visit the chroma dimension in ChromatiCraft
 - Build a self-sustaining colony using nothing but RF Tools,
-- Visit the galaxy through GalactiCraft and GalaxySpace (try setting up a sustainable colony on a space station or asteroid!)
+- Visit the galaxy through Advanced Rocketry (try setting up a sustainable colony on a space station or asteroid!)
 - Build a ReactorCraft Fusion Reactor, and use it to power something like <a href="http://imgur.com/gallery/Qo0il/new">this</a>.
 - Build a complete Modular Power Suit
 - Conquer all The End has to offer.
