update first day guide

--- a/article/rev3-first-day/index.html
+++ b/article/rev3-first-day/index.html
@@ -207,7 +207,7 @@
 
 <h3 id="a-note-about-better-questing">A Note About Better Questing</h3>
 
-<p>The Better Questing mod is installed, however there are currently no quests for REVOLUTION|3. This may change in the future.</p>
+<p>The Better Questing mod is installed. Starter quests can be accessed by pressing the tilde/backtick (top left corner of English keyboards, right below the escape).</p>
 
 <h3 id="your-first-day">Your First Day&hellip;</h3>
 
@@ -230,6 +230,10 @@
 <h3 id="a-bit-about-ore-generation">A Bit About Ore Generation</h3>
 
 <p>REVOLUTION|3 features a complete revamp of ore generation. Ore generates in extremely large, but very rare veins, with trace veins extending for hundreds of blocks off from the main motherlode. Generally, you can follow these trace veins back to a motherlode, though motherlodes are not 100% guaranteed. In addition, REVOLUTION|3 features Harder Ores, a mod which alters ore density, richness, and progression. Generally, when mining an ore block, you will get only 1 or 2 (more with enchantments or processing) raw ore per block hardness. This means most individual ore blocks can be mined multiple times before the ore runs out and they disappear from the world. Raw ore must be refined further in order to create ingots. Generally, you will need 8 or 9 raw ore to create one ingot, to start. However, with proper tools, machines, and/or enchantments, you can increase that ratio to about 3 ingots per raw ore, a HUGE increase in output. REVOLUTION|3 is all about building infrastructure.</p>
+
+<h3 id="a-bit-about-water">A Bit About Water</h3>
+
+<p>REVOLUTION|3 features finite water, meaning you can&rsquo;t make infinite water pools from a couple of source blocks. For early game water sources, use either Railcraft Tank Siding (to make a hollow 3x3x3 tank) or AgriCraft water tanks. Large amounts of water can be created later in the game using the Dew Point Aggregator.</p>
 
 <h3 id="your-next-few-days">Your Next Few Days&hellip;</h3>
 
